# dbt_base_avarias

./: .user.yml  dbt_project.yml  main.py  pyproject.toml
airflow/: Dockerfile  docker-compose.override.yml  requirements.txt
airflow/dags/: dag.py
airflow/dbt/dbt_macaco/models/staging/: stg_frete_avarias.sql
airflow/dbt/dbt_macaco/seeds/: cadastros.csv  frete_avarias.csv
data_warehouse/dbt_macaco/: dbt_project.yml
data_warehouse/dbt_macaco/models/mart/: mart_metricas_clientes.sql
data_warehouse/dbt_macaco/models/staging/: __stg__models.yml
