[project]
name = "airflow-dbt-git"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow==2.9.*",
    "astronomer-cosmos==1.*",
    "dbt-core>=1.10.9",
    "dbt-postgres>=1.9.0",
    "duckdb>=1.3.2",
    "faker>=37.5.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pendulum>=3.1.0",
]
